--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <body>
+    <div><h2>Singapore FIN / NRIC number generator</h2></div>
     <div>
       <label for="prefix">Prefix</label>
       <select name="prefix" id="prefix">
