--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <html>
+  <head>
+    <title>Singapore FIN / NRIC number generator</title>
+    <meta name="author" content="Lukasz R">
+    <link rel="stylesheet" href="style.css">
+  </head>
   <body>
     <div><h2>Singapore FIN / NRIC number generator</h2></div>
-    <div>
+    <div class="box">
       <label for="prefix">Prefix</label>
       <select name="prefix" id="prefix">
         <option value="S">S</option>
@@ -11,12 +16,12 @@
         <option value="M">M</option>
       </select>
     </div>
-    <div>
-      <label for="nric-1">Generated 1</label>
+    <div class="box">
+      <label for="nric-1">Generated:</label>
       <input type="text" id="nric" class="nric" readonly />
     </div>
     <div>
-      <button id="generate">Generate again</button>
+      <button class="button" id="generate">Generate again</button>
     </div>
     <script src="index.js"></script>
   </body>
