--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div><h2>Singapore FIN / NRIC number generator</h2></div>
+    <div class="title"><h2>Singapore FIN / NRIC number generator</h2></div>
     <div class="box">
       <label for="prefix">Prefix</label>
       <select name="prefix" id="prefix">
@@ -20,7 +20,7 @@
       <label for="nric-1">Generated:</label>
       <input type="text" id="nric" class="nric" readonly />
     </div>
-    <div>
+    <div class="button-wraper">
       <button class="button" id="generate">Generate again</button>
     </div>
     <script src="index.js"></script>
