--- a/index.html
+++ b/index.html
@@ -1,27 +1,32 @@
 <html>
   <head>
     <title>Singapore FIN / NRIC number generator</title>
-    <meta name="author" content="Lukasz R">
-    <link rel="stylesheet" href="style.css">
+    <meta name="author" content="Lukasz R" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="milligram.min.css" />
   </head>
   <body>
-    <div class="title"><h2>Singapore FIN / NRIC number generator</h2></div>
-    <div class="box">
-      <label for="prefix">Prefix</label>
-      <select name="prefix" id="prefix">
-        <option value="S">S</option>
-        <option value="T" selected>T</option>
-        <option value="F">F</option>
-        <option value="G">G</option>
-        <option value="M">M</option>
-      </select>
-    </div>
-    <div class="box">
-      <label for="nric-1">Generated:</label>
-      <input type="text" id="nric" class="nric" readonly />
-    </div>
-    <div class="button-wraper">
-      <button class="button" id="generate">Generate again</button>
+    <div class="row">
+      <div class="column column-50 column-offset-25">
+        <div class="title"><h2>Singapore FIN / NRIC number generator</h2></div>
+        <div class="box">
+          <label for="prefix">Prefix</label>
+          <select name="prefix" id="prefix">
+            <option value="S">S</option>
+            <option value="T" selected>T</option>
+            <option value="F">F</option>
+            <option value="G">G</option>
+            <option value="M">M</option>
+          </select>
+        </div>
+        <div class="box">
+          <label for="nric-1">Generated:</label>
+          <input type="text" id="nric" class="nric" readonly />
+        </div>
+        <div class="button-wraper">
+          <button class="button" id="generate">Generate again</button>
+        </div>
+      </div>
     </div>
     <script src="index.js"></script>
   </body>
