--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
   <head>
     <title>Singapore FIN / NRIC number generator</title>
     <meta name="author" content="Lukasz R" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon_io/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon_io/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16.png" />
+    <link rel="manifest" href="/favicon_io/site.webmanifest" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="milligram.min.css" />
   </head>
